  "-e3" encoding options, resulting in reasonable output in combination with
  the ".track" request.
* dpost: With the "-e2" and "-e3" encoding options, use only word spaces as
  indicated by troff for the "widthshow" PostScript operator. This usually
  results in slightly larger PostScript output but is better encodable when
  distilled to PDF so that PDF files become smaller.
* eqn: Avoid to recognize delimiters inside troff escape sequences with "("
  or "[" as well as directly behind a sequence of backslash characters.
* -mm macros: Fixed a bug which caused .ML output to disappear unless in
  troff -x0 mode.

Release 060905
* [nt]roff: The new ".brnl" request causes a break each time a newline is
  encountered at the end of a text input line. Unlike nofill mode, text is
  still wrapped to the line length.
* [nt]roff: The new ".brpnl" request causes a break and a spread each time
  a newline is encountered at the end of a text input line (as if it were
  attached a "\p"). The "\p" escape sequence changes its semantics in this
  mode and causes a break without a spread.
* [nt]roff: The new ".lpfx" request allows to print a string whenever
  a new output line is started. This is mainly useful to implement a
  historic form of block quotation.
* [nt]roff: The predefined number registers "\n[.in]", "\n[.hy]",
  "\n[.int]", "\n[.lt]", "\n[.pn]", "\n[.psr]", and "\n[.sr]" have been
  added.
* [nt]roff: The semantics of the number registers "\n(.x" (remaining space
  on current output line) and "\n(.y" (current actual indent) are now
  documented.
* [nt]roff: The "\n[.kc]" register has been introduced; it holds the width
  of a word interrupted with "\c" on output.
* [nt]roff: Control and escape characters written in a diversion are now
  regular characters in groff compatibility mode.
* [nt]roff: It is not a fatal error if the file specified with ".so" is not
  accessible in groff compatibility mode.